testdata/parser/negative/13.txt
Parse error at 13.pdl:8:16: Function definition must return
			if (x == 0) skip; // illegal!
			            ^
